Added S3 and edit org Api

--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,6 @@ CORS_ORIGINS=http://localhost:5173,http://localhost:5174,http://localhost:5175,h
 AWS_REGION=ap-south-1
 AWS_ACCESS_KEY_ID=your-access-key
 AWS_SECRET_ACCESS_KEY=your-secret-key
-AWS_BUCKET_NAME=your-bucket-name
+AWS_S3_BUCKET=your-bucket-name
+# Optional: CloudFront CDN URL for faster delivery
+AWS_CLOUDFRONT_URL=https://your-distribution.cloudfront.net
