--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.958.0",
+    "@aws-sdk/s3-request-presigner": "^3.958.0",
     "@huggingface/inference": "^4.13.5",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
